--- a/blog-web/public/index.html
+++ b/blog-web/public/index.html
@@ -22,6 +22,9 @@
     }
 </style>
 <body>
+<script src="http://lib.baomitu.com/vue/2.6.14/vue.min.js"></script>
+<script src="http://lib.baomitu.com/vue-router/3.5.1/vue-router.min.js"></script>
+<script src="http://lib.baomitu.com/axios/1.2.1/axios.min.js"></script>
 <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
