--- a/blog-web/public/index.html
+++ b/blog-web/public/index.html
@@ -23,6 +23,7 @@
 </style>
 <body>
 <script src="http://lib.baomitu.com/vue/2.6.14/vue.min.js"></script>
+<script src="https://cdn.bootcss.com/vuex/3.6.2/vuex.min.js"></script>
 <script src="http://lib.baomitu.com/vue-router/3.5.1/vue-router.min.js"></script>
 <script src="http://lib.baomitu.com/axios/1.2.1/axios.min.js"></script>
 <noscript>
