--- a/blog-web/public/index.html
+++ b/blog-web/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <style>
@@ -26,6 +27,7 @@
 <script src="https://cdn.bootcss.com/vuex/3.6.2/vuex.min.js"></script>
 <script src="http://lib.baomitu.com/vue-router/3.5.1/vue-router.min.js"></script>
 <script src="http://lib.baomitu.com/axios/1.2.1/axios.min.js"></script>
+<script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
 <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
