--- a/blog-web/public/index.html
+++ b/blog-web/public/index.html
@@ -21,6 +21,21 @@
         padding: 0;
         box-sizing: border-box;
     }
+
+    .no-scroll {
+        overflow: hidden;
+    }
+
+    .no-scroll::before {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 999;
+    }
 </style>
 <body>
 <script src="http://lib.baomitu.com/vue/2.6.14/vue.min.js"></script>
